refactor(linalg): split lapack_bridge.c into modular structure
Split 592-line lapack_bridge.c into focused files:
- linalg/common.c (helpers)
- linalg/vector_ops.c (dot, norm, normalize, distance)
- linalg/matrix_ops.c (SVD, matmul)
- linalg_internal.h (private constants)

This improves maintainability and sets up scalable structure for
future algorithms and pipelines. 100% backward compatible.

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,10 @@
 /ext/*
 /ide/*
 !ext/libstemmer
-!ext/ccontrol
-!ext/elapack
 !ext/snowball_*
-!ext/ccontrol_*
 !ext/lapack_*
+!ext/linalg_*
+!ext/linalg
 
 # Zephir generated files (keep source .zep, ignore generated C if desired)
 # Uncomment if you want to keep generated C out of git
