feat(icu): add icu tokenizer bridge optimizers and docs
- Add ICU build deps and config wiring.
- Expose Text::wordBreak and Text::sentenceBreak APIs.
- Document usage and add tokenizer test suite.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 !ext/lapack_*
 !ext/linalg_*
 !ext/linalg
+!ext/icu_*
 
 # Zephir generated files (keep source .zep, ignore generated C if desired)
 # Uncomment if you want to keep generated C out of git
